[gd_scene load_steps=12 format=3 uid="uid://c055352hdpy17"]

[ext_resource type="PackedScene" uid="uid://dbm5nfk155u3" path="res://scenes/player.tscn" id="1_efn1k"]
[ext_resource type="Texture2D" uid="uid://b8r51roakk3cw" path="res://assets/sprites/world_tileset.png" id="2_o5r2l"]
[ext_resource type="PackedScene" uid="uid://c88w2ntq4qmha" path="res://scenes/kill_zone.tscn" id="3_q18y5"]
[ext_resource type="Script" path="res://scripts/GameManager.gd" id="4_sihve"]
[ext_resource type="FontFile" uid="uid://btfuq7we3twcg" path="res://assets/fonts/PixelOperator8-Bold.ttf" id="5_8o1ms"]
[ext_resource type="PackedScene" uid="uid://cu6ajsq07eskn" path="res://scenes/fruits/fruit_yellow.tscn" id="9_4d38u"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_aob6a"]
texture = ExtResource("2_o5r2l")
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:0/0 = 0
1:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:0/0/physics_layer_0/angular_velocity = 0.0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:0/0 = 0
2:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:0/0/physics_layer_0/angular_velocity = 0.0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:0/0 = 0
3:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:0/0/physics_layer_0/angular_velocity = 0.0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:0/0 = 0
4:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:0/0/physics_layer_0/angular_velocity = 0.0
4:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:0/0 = 0
5:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:0/0/physics_layer_0/angular_velocity = 0.0
5:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:0/0 = 0
6:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:0/0/physics_layer_0/angular_velocity = 0.0
6:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:0/0 = 0
7:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:0/0/physics_layer_0/angular_velocity = 0.0
7:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:0/0 = 0
8:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
8:0/0/physics_layer_0/angular_velocity = 0.0
8:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
9:0/0 = 0
9:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
9:0/0/physics_layer_0/angular_velocity = 0.0
9:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-6.54074, -8, 7.24784, -6.45235, 6.36396, 0, -8, -2.2981)
10:0/0 = 0
10:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
10:0/0/physics_layer_0/angular_velocity = 0.0
10:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -5.75, 8, -5.875, 8, 1.125, -8, 1.125)
11:0/0 = 0
11:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
11:0/0/physics_layer_0/angular_velocity = 0.0
11:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-6.98268, -6.36396, 6.89429, -8, 6.8059, -1.32583, -6.54074, 0.265164, -8, -2.03293)
0:1/0 = 0
0:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:1/0/physics_layer_0/angular_velocity = 0.0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:1/0 = 0
1:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:1/0/physics_layer_0/angular_velocity = 0.0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:1/0 = 0
2:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:1/0/physics_layer_0/angular_velocity = 0.0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:1/0 = 0
3:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:1/0/physics_layer_0/angular_velocity = 0.0
3:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:1/0 = 0
4:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:1/0/physics_layer_0/angular_velocity = 0.0
4:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:1/0 = 0
5:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:1/0/physics_layer_0/angular_velocity = 0.0
5:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:1/0 = 0
6:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:1/0/physics_layer_0/angular_velocity = 0.0
6:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:1/0 = 0
7:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:1/0/physics_layer_0/angular_velocity = 0.0
7:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:1/0 = 0
8:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
8:1/0/physics_layer_0/angular_velocity = 0.0
8:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
9:1/0 = 0
9:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
9:1/0/physics_layer_0/angular_velocity = 0.0
9:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-6.54074, -8, 7.24784, -6.45235, 6.36396, 0, -8, -2.2981)
10:1/0 = 0
10:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
10:1/0/physics_layer_0/angular_velocity = 0.0
10:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -5.75, 8, -5.875, 8, 1.125, -8, 1.125)
11:1/0 = 0
11:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
11:1/0/physics_layer_0/angular_velocity = 0.0
11:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-6.98268, -6.36396, 6.89429, -8, 6.8059, -1.32583, -6.54074, 0.265164, -8, -2.03293)
0:2/0 = 0
0:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:2/0/physics_layer_0/angular_velocity = 0.0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:2/0 = 0
1:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:2/0/physics_layer_0/angular_velocity = 0.0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:2/0 = 0
2:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:2/0/physics_layer_0/angular_velocity = 0.0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:2/0 = 0
3:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:2/0/physics_layer_0/angular_velocity = 0.0
3:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:2/0 = 0
4:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:2/0/physics_layer_0/angular_velocity = 0.0
4:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:2/0 = 0
5:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:2/0/physics_layer_0/angular_velocity = 0.0
5:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:2/0 = 0
6:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:2/0/physics_layer_0/angular_velocity = 0.0
6:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:2/0 = 0
7:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:2/0/physics_layer_0/angular_velocity = 0.0
7:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:2/0 = 0
8:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
8:2/0/physics_layer_0/angular_velocity = 0.0
8:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
9:2/0 = 0
9:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
9:2/0/physics_layer_0/angular_velocity = 0.0
9:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-6.54074, -8, 7.24784, -6.45235, 6.36396, 0, -8, -2.2981)
10:2/0 = 0
10:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
10:2/0/physics_layer_0/angular_velocity = 0.0
10:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -5.75, 8, -5.875, 8, 1.125, -8, 1.125)
11:2/0 = 0
11:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
11:2/0/physics_layer_0/angular_velocity = 0.0
11:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-6.98268, -6.36396, 6.89429, -8, 6.8059, -1.32583, -6.54074, 0.265164, -8, -2.03293)
0:3/0 = 0
0:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:3/0/physics_layer_0/angular_velocity = 0.0
1:3/0 = 0
1:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:3/0/physics_layer_0/angular_velocity = 0.0
2:3/0 = 0
2:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:3/0/physics_layer_0/angular_velocity = 0.0
5:3/0 = 0
5:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:3/0/physics_layer_0/angular_velocity = 0.0
6:3/0 = 0
6:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:3/0/physics_layer_0/angular_velocity = 0.0
7:3/0 = 0
7:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:3/0/physics_layer_0/angular_velocity = 0.0
8:3/0 = 0
8:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
8:3/0/physics_layer_0/angular_velocity = 0.0
9:3/0 = 0
9:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
9:3/0/physics_layer_0/angular_velocity = 0.0
0:4/0 = 0
0:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:4/0/physics_layer_0/angular_velocity = 0.0
1:4/0 = 0
1:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:4/0/physics_layer_0/angular_velocity = 0.0
5:4/0 = 0
5:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:4/0/physics_layer_0/angular_velocity = 0.0
6:4/0 = 0
6:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:4/0/physics_layer_0/angular_velocity = 0.0
7:4/0 = 0
7:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:4/0/physics_layer_0/angular_velocity = 0.0
8:4/0 = 0
8:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
8:4/0/physics_layer_0/angular_velocity = 0.0
9:4/0 = 0
9:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
9:4/0/physics_layer_0/angular_velocity = 0.0
0:5/0 = 0
0:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:5/0/physics_layer_0/angular_velocity = 0.0
1:5/0 = 0
1:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:5/0/physics_layer_0/angular_velocity = 0.0
5:5/0 = 0
5:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:5/0/physics_layer_0/angular_velocity = 0.0
6:5/0 = 0
6:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:5/0/physics_layer_0/angular_velocity = 0.0
7:5/0 = 0
7:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:5/0/physics_layer_0/angular_velocity = 0.0
8:5/0 = 0
8:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
8:5/0/physics_layer_0/angular_velocity = 0.0
1:6/0 = 0
1:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:6/0/physics_layer_0/angular_velocity = 0.0
5:6/0 = 0
5:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:6/0/physics_layer_0/angular_velocity = 0.0
6:6/0 = 0
6:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:6/0/physics_layer_0/angular_velocity = 0.0
7:6/0 = 0
7:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:6/0/physics_layer_0/angular_velocity = 0.0
8:6/0 = 0
8:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
8:6/0/physics_layer_0/angular_velocity = 0.0
0:7/0 = 0
0:7/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:7/0/physics_layer_0/angular_velocity = 0.0
1:7/0 = 0
1:7/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:7/0/physics_layer_0/angular_velocity = 0.0
3:7/0 = 0
3:7/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:7/0/physics_layer_0/angular_velocity = 0.0
5:7/0 = 0
5:7/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:7/0/physics_layer_0/angular_velocity = 0.0
6:7/0 = 0
6:7/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:7/0/physics_layer_0/angular_velocity = 0.0
7:7/0 = 0
7:7/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:7/0/physics_layer_0/angular_velocity = 0.0
8:7/0 = 0
8:7/0/physics_layer_0/linear_velocity = Vector2(0, 0)
8:7/0/physics_layer_0/angular_velocity = 0.0
0:8/0 = 0
0:8/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:8/0/physics_layer_0/angular_velocity = 0.0
1:8/0 = 0
1:8/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:8/0/physics_layer_0/angular_velocity = 0.0
2:8/0 = 0
2:8/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:8/0/physics_layer_0/angular_velocity = 0.0
3:8/0 = 0
3:8/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:8/0/physics_layer_0/angular_velocity = 0.0
4:8/0 = 0
4:8/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:8/0/physics_layer_0/angular_velocity = 0.0
5:8/0 = 0
5:8/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:8/0/physics_layer_0/angular_velocity = 0.0
6:8/0 = 0
6:8/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:8/0/physics_layer_0/angular_velocity = 0.0
7:8/0 = 0
7:8/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:8/0/physics_layer_0/angular_velocity = 0.0
8:8/0 = 0
8:8/0/physics_layer_0/linear_velocity = Vector2(0, 0)
8:8/0/physics_layer_0/angular_velocity = 0.0
0:9/0 = 0
0:9/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:9/0/physics_layer_0/angular_velocity = 0.0
1:9/0 = 0
1:9/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:9/0/physics_layer_0/angular_velocity = 0.0
2:9/0 = 0
2:9/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:9/0/physics_layer_0/angular_velocity = 0.0
3:9/0 = 0
3:9/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:9/0/physics_layer_0/angular_velocity = 0.0
4:9/0 = 0
4:9/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:9/0/physics_layer_0/angular_velocity = 0.0
5:9/0 = 0
5:9/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:9/0/physics_layer_0/angular_velocity = 0.0
6:9/0 = 0
6:9/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:9/0/physics_layer_0/angular_velocity = 0.0
7:9/0 = 0
7:9/0/physics_layer_0/linear_velocity = Vector2(0, 0)
7:9/0/physics_layer_0/angular_velocity = 0.0
0:10/0 = 0
0:10/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:10/0/physics_layer_0/angular_velocity = 0.0
1:10/0 = 0
1:10/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:10/0/physics_layer_0/angular_velocity = 0.0
2:10/0 = 0
2:10/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:10/0/physics_layer_0/angular_velocity = 0.0
3:10/0 = 0
3:10/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:10/0/physics_layer_0/angular_velocity = 0.0
4:10/0 = 0
4:10/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:10/0/physics_layer_0/angular_velocity = 0.0
6:10/0 = 0
6:10/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:10/0/physics_layer_0/angular_velocity = 0.0
0:11/0 = 0
0:11/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:11/0/physics_layer_0/angular_velocity = 0.0
1:11/0 = 0
1:11/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:11/0/physics_layer_0/angular_velocity = 0.0
2:11/0 = 0
2:11/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:11/0/physics_layer_0/angular_velocity = 0.0
3:11/0 = 0
3:11/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:11/0/physics_layer_0/angular_velocity = 0.0
4:11/0 = 0
4:11/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:11/0/physics_layer_0/angular_velocity = 0.0
5:11/0 = 0
5:11/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:11/0/physics_layer_0/angular_velocity = 0.0
0:12/0 = 0
0:12/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:12/0/physics_layer_0/angular_velocity = 0.0
1:12/0 = 0
1:12/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:12/0/physics_layer_0/angular_velocity = 0.0
2:12/0 = 0
2:12/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:12/0/physics_layer_0/angular_velocity = 0.0
3:12/0 = 0
3:12/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:12/0/physics_layer_0/angular_velocity = 0.0
4:12/0 = 0
4:12/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:12/0/physics_layer_0/angular_velocity = 0.0
0:13/0 = 0
0:13/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:13/0/physics_layer_0/angular_velocity = 0.0
1:13/0 = 0
1:13/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:13/0/physics_layer_0/angular_velocity = 0.0
2:13/0 = 0
2:13/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:13/0/physics_layer_0/angular_velocity = 0.0
3:13/0 = 0
3:13/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:13/0/physics_layer_0/angular_velocity = 0.0
4:13/0 = 0
4:13/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:13/0/physics_layer_0/angular_velocity = 0.0
5:13/0 = 0
5:13/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:13/0/physics_layer_0/angular_velocity = 0.0
0:14/0 = 0
0:14/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:14/0/physics_layer_0/angular_velocity = 0.0
1:14/0 = 0
1:14/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:14/0/physics_layer_0/angular_velocity = 0.0
2:14/0 = 0
2:14/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:14/0/physics_layer_0/angular_velocity = 0.0
3:14/0 = 0
3:14/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:14/0/physics_layer_0/angular_velocity = 0.0
4:14/0 = 0
4:14/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:14/0/physics_layer_0/angular_velocity = 0.0
0:15/0 = 0
0:15/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:15/0/physics_layer_0/angular_velocity = 0.0
1:15/0 = 0
1:15/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:15/0/physics_layer_0/angular_velocity = 0.0
2:15/0 = 0
2:15/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:15/0/physics_layer_0/angular_velocity = 0.0
3:15/0 = 0
3:15/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:15/0/physics_layer_0/angular_velocity = 0.0
2:4/size_in_atlas = Vector2i(3, 3)
2:4/0 = 0
2:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:4/0/physics_layer_0/angular_velocity = 0.0

[sub_resource type="TileSet" id="TileSet_bx6bj"]
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_aob6a")

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_y4es2"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0pec6"]
bg_color = Color(0.988235, 0.690196, 0.486275, 1)
border_width_left = 2
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(1, 0.494118, 0.533333, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
shadow_color = Color(0, 0, 0, 0.168627)
shadow_size = 13

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wolgr"]
bg_color = Color(0.6, 1, 0.658824, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(2.11775e-06, 0.915793, 0.594805, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="level_1" type="Node2D"]

[node name="Player" parent="." instance=ExtResource("1_efn1k")]
z_index = 2
position = Vector2(169, 532)

[node name="Camera" type="Camera2D" parent="Player"]
position = Vector2(0, 5)
zoom = Vector2(4, 4)
limit_bottom = 620
limit_smoothed = true
position_smoothing_enabled = true

[node name="World" type="TileMap" parent="."]
tile_set = SubResource("TileSet_bx6bj")
format = 2
layer_0/name = "Background"
layer_1/name = "Mid"
layer_1/tile_data = PackedInt32Array(2228232, 327680, 1, 2228233, 327680, 1, 2228234, 262144, 0, 2228235, 262144, 0, 2228236, 262144, 0, 2228237, 262144, 0, 2162701, 262144, 0, 2162702, 327680, 1, 2162703, 262144, 0, 2162704, 262144, 0, 2097168, 262144, 0, 2031632, 262144, 0, 2031633, 262144, 0, 2031634, 327680, 1, 2031635, 327680, 1, 2031636, 327680, 1, 2031637, 327680, 1, 2031638, 262144, 0, 2293768, 262144, 1, 2359304, 327680, 1, 2424840, 327680, 1, 2424841, 327680, 1, 2424842, 262144, 1, 2424843, 262144, 1, 2424844, 262144, 1, 2424845, 327680, 1, 2424846, 327680, 1, 2424847, 327680, 1, 2424848, 327680, 1, 2424849, 262144, 1, 2424850, 262144, 1, 2424851, 262144, 1, 2424852, 327680, 1, 2424853, 327680, 1, 2424854, 262144, 1, 2359318, 262144, 1, 2293782, 262144, 1, 2228246, 262144, 1, 2162710, 262144, 1, 2097174, 262144, 1, 2097173, 262144, 1, 2097172, 262144, 1, 2097171, 262144, 1, 2097170, 262144, 1, 2097169, 262144, 1, 2162705, 262144, 1, 2228241, 262144, 1, 2293777, 262144, 1, 2359313, 327680, 1, 2359312, 327680, 1, 2359311, 327680, 1, 2359310, 327680, 1, 2359309, 327680, 1, 2359308, 327680, 1, 2359307, 327680, 1, 2359306, 327680, 1, 2359305, 327680, 1, 2293769, 262144, 1, 2293770, 262144, 1, 2293772, 262144, 1, 2293773, 262144, 1, 2293774, 262144, 1, 2293775, 262144, 1, 2293776, 262144, 1, 2228240, 262144, 1, 2228239, 262144, 1, 2228238, 262144, 1, 2359314, 262144, 1, 2359315, 262144, 1, 2359316, 327680, 1, 2359317, 327680, 1, 2293781, 327680, 1, 2228245, 327680, 1, 2162709, 327680, 1, 2162708, 327680, 1, 2162707, 327680, 1, 2228243, 327680, 1, 2228242, 327680, 1, 2293778, 327680, 1, 2228244, 327680, 1, 2293780, 327680, 1, 2162706, 327680, 1, 2293779, 327680, 1, 2293771, 262144, 1, 2228231, 327680, 1, 2228230, 327680, 1, 2228229, 327680, 1, 2228228, 262144, 0, 2228227, 262144, 0, 2162691, 327680, 1, 2162690, 327680, 1, 2162689, 262144, 0, 2162688, 327680, 1, 2228223, 262144, 0, 2228222, 262144, 0, 2293758, 327680, 1, 2359294, 262144, 1, 2424830, 262144, 1, 2490366, 262144, 1, 2555902, 262144, 1, 2555903, 262144, 1, 2490368, 262144, 1, 2490369, 327680, 1, 2490370, 327680, 1, 2490371, 327680, 1, 2490372, 327680, 1, 2490373, 327680, 1, 2490374, 327680, 1, 2490375, 262144, 1, 2424839, 327680, 1, 2359303, 327680, 1, 2359302, 327680, 1, 2293766, 327680, 1, 2359301, 327680, 1, 2293767, 262144, 1, 2424837, 327680, 1, 2424838, 327680, 1, 2359300, 262144, 1, 2293764, 327680, 1, 2424836, 327680, 1, 2293765, 327680, 1, 2424835, 262144, 1, 2359299, 262144, 1, 2293763, 327680, 1, 2293762, 327680, 1, 2359298, 327680, 1, 2359297, 327680, 1, 2228226, 262144, 1, 2424834, 262144, 1, 2424833, 327680, 1, 2359296, 327680, 1, 2293761, 327680, 1, 2228225, 262144, 1, 2293760, 262144, 1, 2424832, 327680, 1, 2424831, 327680, 1, 2359295, 262144, 1, 2228224, 327680, 1, 2490367, 327680, 1, 2293759, 327680, 1, 2621439, 262144, 1, 2555904, 262144, 1, 2555905, 262144, 1, 2555906, 262144, 1, 2621438, 262144, 1, 2621440, 262144, 1, 2621441, 262144, 1, 2621442, 262144, 1, 2621443, 262144, 1, 2621444, 262144, 1, 2621445, 262144, 1, 2621446, 262144, 1, 2621447, 262144, 1, 2621448, 262144, 1, 2621449, 262144, 1, 2621450, 262144, 1, 2686986, 262144, 1, 2686987, 262144, 1, 2686988, 262144, 1, 2686989, 262144, 1, 2686990, 262144, 1, 2686991, 327680, 1, 2686992, 327680, 1, 2686993, 327680, 1, 2686994, 327680, 1, 2686995, 327680, 1, 2686996, 327680, 1, 2686997, 262144, 1, 2621461, 262144, 1, 2621462, 262144, 1, 2555926, 262144, 1, 2490390, 262144, 1, 2490389, 327680, 1, 2555924, 327680, 1, 2555923, 262144, 1, 2555922, 262144, 1, 2621457, 262144, 1, 2621456, 262144, 1, 2621455, 327680, 1, 2621454, 327680, 1, 2621453, 262144, 1, 2621452, 262144, 1, 2555915, 327680, 1, 2555914, 327680, 1, 2555913, 327680, 1, 2555912, 327680, 1, 2555911, 327680, 1, 2555910, 262144, 1, 2555907, 262144, 1, 2555908, 262144, 1, 2555909, 262144, 1, 2555916, 327680, 1, 2555917, 327680, 1, 2555918, 327680, 1, 2490382, 327680, 1, 2490381, 327680, 1, 2490380, 327680, 1, 2490379, 327680, 1, 2490378, 327680, 1, 2621451, 262144, 1, 2555921, 262144, 1, 2621459, 262144, 1, 2621460, 327680, 1, 2490388, 327680, 1, 2621458, 262144, 1, 2555925, 262144, 1, 2490387, 327680, 1, 2490386, 327680, 1, 2555920, 262144, 1, 2490384, 327680, 1, 2490385, 327680, 1, 2490383, 327680, 1, 2490377, 262144, 1, 2490376, 262144, 1, 2555919, 262144, 1)

[node name="KillZone" parent="." instance=ExtResource("3_q18y5")]
position = Vector2(471, 921)

[node name="CollisionShape2D" type="CollisionShape2D" parent="KillZone"]
shape = SubResource("WorldBoundaryShape2D_y4es2")

[node name="GameManager" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("4_sihve")

[node name="CanvasLayer" type="CanvasLayer" parent="GameManager"]

[node name="ScorePanel" type="Panel" parent="GameManager/CanvasLayer"]
offset_left = 12.0
offset_top = 13.0
offset_right = 271.0
offset_bottom = 101.0
theme_override_styles/panel = SubResource("StyleBoxFlat_0pec6")

[node name="ScoreText" type="Label" parent="GameManager/CanvasLayer/ScorePanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("5_8o1ms")
theme_override_font_sizes/font_size = 24
text = "COINS: 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SlimesPanel" type="Panel" parent="GameManager/CanvasLayer/ScorePanel"]
layout_mode = 1
offset_top = 93.0
offset_right = 259.0
offset_bottom = 147.0
theme_override_styles/panel = SubResource("StyleBoxFlat_wolgr")

[node name="SlimesText" type="Label" parent="GameManager/CanvasLayer/ScorePanel/SlimesPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("5_8o1ms")
theme_override_font_sizes/font_size = 16
text = "SLIMES: 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Platforms" type="Node" parent="."]

[node name="Coins" type="Node" parent="."]

[node name="Enemies" type="Node" parent="."]

[node name="Fruit_yellow" parent="." instance=ExtResource("9_4d38u")]
position = Vector2(128, 259)
